fix: Small bugs in dark mode and Safari

--- a/src/app/room/room-controller-panel/room-controller-panel.component.scss
+++ b/src/app/room/room-controller-panel/room-controller-panel.component.scss
@@ -70,7 +70,7 @@
     ::ng-deep {
         .mat-mdc-icon-button {
             --mdc-icon-button-state-layer-size: 30px !important;
-            padding: 3px;
+            padding: 3px !important;
         }
 
       .mat-mdc-button-touch-target {
